# logistics-backend-task

./: .env.template  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: code_quality.yml
alembic/: env.py
alembic/versions/: d01bbbb1aca3_create_initial_tables_for_logistics_.py
app/: __init__.py  create_fastapi_app.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  order.py
app/core/: __init__.py  config.py  db_hepler.py
app/core/exceptions/: __init__.py  exceptions.py
app/core/models/: __init__.py  base.py  category.py  client.py  nomenclature.py  order.py  order_items.py
app/schemas/: client.py  order.py  order_item.py
app/scripts/: seed_db.py
app/services/: __init__.py  base.py  order_servise.py
app/utils/: __init__.py  case_converter.py
docs/: solution.sql
tests/: conftest.py
tests/integration/: test_orders_api.py
tests/unit/: test_crud_base.py  test_order_service.py
