[project]
name = "logistics-backend-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim",email = "maksimgubenin@mail.ru"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlalchemy[asyncio] (>=2.0.46,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "orjson (>=3.11.7,<4.0.0)",
    "inflection (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "testcontainers (>=4.14.1,<5.0.0)"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "C", "B", "W", "Q"]
ignore = ["B905"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
# Указываем область видимости цикла для всего
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
addopts = """
    -v
    -p no:warnings
    --cov=app
    --cov-report=term-missing
    --cov-report=xml:coverage.xml
    --cov-fail-under=80
"""

[tool.coverage.run]
omit = [
    "app/scripts/*",
    "app/main.py",
    "tests/*",
    "alembic/*",
]